--- a/package.json
+++ b/package.json
@@ -19,12 +19,14 @@
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
     "react-router-dom": "^5.3.0",
+    "react-select": "^5.2.2",
     "styled-components": "^5.3.1"
   },
   "devDependencies": {
     "@types/react": "^17.0.30",
     "@types/react-dom": "^17.0.9",
     "@types/react-router-dom": "^5.3.1",
+    "@types/react-select": "^5.0.1",
     "@types/styled-components": "^5.1.15",
     "ts-loader": "^9.2.6",
     "typescript": "^4.4.4",
