--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@types/react-router-dom": "^5.3.1",
     "@types/react-select": "^5.0.1",
     "@types/styled-components": "^5.1.15",
+    "cross-env": "^7.0.3",
     "ts-loader": "^9.2.6",
     "typescript": "^4.4.4",
     "webpack": "^5.58.2",
