--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
   "author": "James Becker <48602730+jameskbecker@users.noreply.github.com>",
   "license": "MIT",
   "scripts": {
-    "start:dev": "npx webpack serve --env=dev",
+    "dev": "npx webpack serve --config webpack.config.dev.js",
     "start": "node app.js",
-    "build": "webpack --mode=production"
+    "build": "webpack --config webpack.config.prod.js"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
@@ -39,6 +39,7 @@
     "typescript": "^4.4.4",
     "webpack": "^5.58.2",
     "webpack-cli": "^4.9.0",
-    "webpack-dev-server": "^4.3.1"
+    "webpack-dev-server": "^4.3.1",
+    "webpack-merge": "^5.8.0"
   }
 }
