--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@types/styled-components": "^5.1.15",
     "cross-env": "^7.0.3",
     "ts-loader": "^9.2.6",
+    "tsconfig-paths-webpack-plugin": "^3.5.2",
     "typescript": "^4.4.4",
     "webpack": "^5.58.2",
     "webpack-cli": "^4.9.0",
